tirei o css da pasta

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
     <!-- css stylesheet -->
     <!-- menu -->
-    <link rel="stylesheet" href="/css/index/menu.css" />
+    <link rel="stylesheet" href="menu.css" />
     <!-- cards -->
-    <link rel="stylesheet" href="/css/index/cards.css" />
+    <link rel="stylesheet" href="cards.css" />
     <!-- flip  -->
-    <link rel="stylesheet" href="/css/index/flip.css" />
+    <link rel="stylesheet" href="flip.css" />
     <!-- texto animado -->
-    <link rel="stylesheet" href="/css/index/txt-animado.css" />
+    <link rel="stylesheet" href="txt-animado.css" />
     <!-- footer -->
-    <link rel="stylesheet" href="/css/index/footer.css" />
+    <link rel="stylesheet" href="footer.css" />
     <!-- responsividade -->
     <link rel="stylesheet" href="css/index/responsivo/index-responsivo.css">
     <!-- ------end css---------- -->
